Fix headings alignment

--- a/portfolio/src/Components/Footer/styles.scss
+++ b/portfolio/src/Components/Footer/styles.scss
@@ -1,6 +1,6 @@
 .footer {
     background-color :#c5ded7;
-    padding-top: 184px;
+    padding-top: 150px;
 }
 
 
