--- a/portfolio/src/Components/MessageButton/styles.scss
+++ b/portfolio/src/Components/MessageButton/styles.scss
@@ -1,7 +1,7 @@
 .messageButton {
     font-size: .8em;
     background: #45b29a;
-    padding: 2em 16em 1em 4em;
+    padding: 2em 6em 1em 3em;
     color: #1b7f69;
     text-decoration: none;
     margin: 1.5em 0 0;
