--- a/portfolio/src/Components/Text/styles.scss
+++ b/portfolio/src/Components/Text/styles.scss
@@ -1,3 +1,16 @@
+titletext {
+    // color: #1e836c;
+    color: #45b29a;
+    font-size: 5.8em;
+    font-weight: 400;
+    font-family: 'Indie Flower', cursive;
+}
+titledetail {
+    color: #45b29a;
+    font-size: 140%;
+    font-weight: 400;
+}
+
 h2 {
     color: #1e836c;
     font-size: 3.8em;
