--- a/portfolio/src/Pages/HomePage/styles.scss
+++ b/portfolio/src/Pages/HomePage/styles.scss
@@ -9,13 +9,17 @@
     }
 
     &__description {
+        margin-top: 8%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        min-height: 20vh;
     }
 
     &__landscape {
-        width: 100%;
+        width: 65%;
+        margin-top: 90px;
     }
+
 }
